# construct-veil

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build-and-push.yml
crates/construct-veil-protocol/: Cargo.toml
crates/construct-veil-protocol/src/: auth.rs  capability.rs  framing.rs  lib.rs  ticket.rs  varint.rs
crates/construct-veil-relay/: Cargo.toml  build.rs
crates/construct-veil-relay/proto/: veil_service.proto
crates/construct-veil-relay/src/: chain.rs  gate.rs  main.rs  site.rs  ticket_sync.rs  tickets.rs  tls.rs  tunnel.rs  upstream_tls.rs
deploy/: .env.example  Dockerfile.cover  Dockerfile.relay  Dockerfile.relay-slim  README.md  docker-compose.prod.yml  docker-compose.yml
deploy/cover-site/: package-lock.json  package.json  server.js
deploy/cover-site/data/: items.json
deploy/cover-site/public/: about.html  app.js  index.html  styles.css
deploy/cover-site/public/.well-known/: security.txt
deploy/scripts/: bootstrap-prod.sh  bootstrap.sh  deploy-prod.sh  issue-ticket.sh  provision-link.sh  renew-cert.sh
src/: ffi.rs  lib.rs  metrics.rs  tls_fingerprint.rs  tls_pinned.rs
src/transport/: mod.rs  webtunnel.rs
src/veil/: coordinator.rs  diag.rs  fsm.rs  mod.rs  obfuscator.rs  scoring.rs  veil_front_adapter.rs
src/veil/fsm/: mod.rs  reducer.rs  scoring.rs  types.rs
src/veil/veil_front/: mod.rs
src/veil/veil_front/padding/: mod.rs  mode0_front.rs
tests/classifier/: .gitignore  README.md  features.py  requirements.txt  synthetic.py  train.py
