[package]
name = "construct-veil-protocol"
version.workspace = true
edition.workspace = true
description = "Shared wire protocol types for veil-front: tickets, auth records, frame codec"

[dependencies]
bytes = "1.6"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1"
tokio-util = { version = "0.7", features = ["codec"] }

[features]
rand = ["dep:rand"]

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
hex = "0.4"
proptest = "1.4"
rand = "0.8"
rand_chacha = "0.3"
